--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,12 @@
 #header h1{
   text-align: center;
 }
-  nav.navigation {
+
+body {
+  background-image: url("images/landing_page_bg.jpg");
+}
+
+nav.navigation {
   display: block;
   margin-bottom: 10px;
 }
@@ -21,7 +26,7 @@ nav.navigation  ul li a {
   display: block;
   float: left;
   padding: 3px 6px;
-  color: #575c7d;
+  color: #003366;
   font-size:22px;
   text-decoration: none;
   font-weight: bold;
