--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: url("images/landing_page_bg.jpg");
+  background-image: url(images/landing_page_bg.jpg);
 }
 
 nav.navigation {
