--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ nav.navigation {
   display: block;
   margin-bottom: 10px;
   position: relative;
-  left: -20px;
+  left: 6px;
 }
 nav.navigation  ul {
   list-style: none;
@@ -29,28 +29,41 @@ nav.navigation  ul {
 }
 nav.navigation  ul li {
   display: inline-block;
+  background-color: rgba(64,64,64,0.5);
 }
 nav.navigation  ul li a {
   display: block;
   float: left;
-  padding: 3px 6px;
-  color: #99ccff;
+  padding: 3px 36px;
+  color: #ffeee6;
   font-size:22px;
   text-decoration: none;
   font-weight: bold;
 }
 nav.navigation  ul li a:hover {
-  background: #ccc;
+  background: rgba(192,192,192,0.3);
   color: #fff;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  padding: 3px 6px;
+  padding: 3px 36px;
   margin: 0;
   text-decoration: none;
 }
 
 /* page Content */
+
+#profile-picture-wrapper {
+  max-width: 90%;
+  max-height: 30%;
+  position: relative;
+  top: 18px;
+  left: 5%;
+}
+
+#DP {
+  max-width: 100%
+}
 #content {
   display: block;
   clear: both;
@@ -62,16 +75,18 @@ nav.navigation  ul li a:hover {
   width: 35%;
   float: left;
   margin: 0 15px;
-  background: #00284d; 
-  min-height: 700px; 
+  background-image: linear-gradient(rgba(77,26,0,0.6),rgba(230,77,0,0.6));
+  min-height: 355px; 
   text-align: center;
+  box-shadow: 0 0 8px 8px #4d1a00 inset;
 }
 #right {
   float: right;
   width: 62%;
-  background: #004f99;
+  background-image: linear-gradient(rgba(153,51,0,0.6),rgba(255,119,51,0.6));
   text-align: center;
   min-height: 700px;
+  box-shadow: 0 0 8px 8px #993300 inset;
 }
 footer{
   text-align: center;
