--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 }
 
 body {
+  font-family: "Roboto Slab", serif;
   background:
    url(../images/landing_page_bg.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
