--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
   font-weight:bold;
   white-space:normal;
   position:relative;
-  left:16%;
+  left:20px;
 }
 #chess-puzzle {
   width:95%;
@@ -35,6 +35,51 @@ body {
   white-space:normal;
   position:relative;
   left:20px;
+}
+nav.article {
+  display: block;
+  white-space:normal;
+  min-height: 100%;
+}
+nav.article ul {
+  width:95%;
+  list-style: none;
+  font-size: 14px; 
+  text-align: center;
+  min-height: 100%;
+  position: relative;
+  right:4.3%;
+}
+nav.article ul li {
+  display:block;
+  width:100%;
+  vertical-align: middle;
+  background-color: rgba(255,255,255,0.38);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  max-height: 65px;
+  border: 4px groove #444444;
+  border-radius: 4px;
+  font-weight: bold;
+  overflow:hidden;
+  padding-bottom: 20px;
+  transition: max-height 1s;
+}
+nav.article ul li:hover{
+  width:100%;
+  max-height: 700px;
+  vertical-align: middle;
+  background-color: rgba(64,64,64,1);
+  border: 4px groove #444444;
+  border-radius: 4px;
+  font-weight: bold;
+}
+
+nav.article ul li:hover::-webkit-scrollbar {
+  width: 0px;
+}
+nav.article ul li:hover::-webkit-scrollbar * {
+  background:transparent; // manage scrollbar background color here
 }
 nav.contact-navigation {
   display: block;
@@ -107,6 +152,11 @@ nav.navigation  ul li a:hover {
 #chess_puzzle {
   max-width: 65%;
 }
+#chess_puzzle_sol {
+  position:relative;
+  right:16%;
+  max-width: 65%;
+}
 #DP {
   max-width: 100%
 }
@@ -121,7 +171,7 @@ nav.navigation  ul li a:hover {
   width: 35%;
   float: left;
   margin: 0 15px;
-  background-image: linear-gradient(rgba(77,26,0,0.5),rgba(230,77,0,0.5));
+  background-image: linear-gradient(rgba(77,26,0,0.6),rgba(230,77,0,0.6));
   min-height: 355px; 
   text-align: center;
   box-shadow: 0 0 0px 0px #4d1a00 inset;
@@ -129,7 +179,7 @@ nav.navigation  ul li a:hover {
 #right {
   float: right;
   width: 62%;
-  background-image: linear-gradient(rgba(153,51,0,0.5),rgba(255,119,51,0.5));
+  background-image: linear-gradient(rgba(153,51,0,0.6),rgba(255,119,51,0.6));
   text-align: left;
   height: 770px;
   color: white;
@@ -139,27 +189,24 @@ nav.navigation  ul li a:hover {
 #blog-container {
   float: right;
   width: 62%;
-  background-image: linear-gradient(rgba(153,51,0,0.5),rgba(255,119,51,0.5));
+  background-image: linear-gradient(rgba(153,51,0,0.6),rgba(255,119,51,0.6));
   text-align: left;
-  height: 770px;
+  max-height: 700px;
   color: white;
   box-shadow: 0 0 0px 0px #993300 inset;
-  overflow-y: scroll;
+  overflow: auto;
 }
-
 #blog-container::-webkit-scrollbar {
-  width:30px; // manage scrollbar width here
+  width: 0px;
 }
 #blog-container::-webkit-scrollbar * {
   background:transparent; // manage scrollbar background color here
 }
-#blog-container::-webkit-scrollbar-thumb {
-  background:rgba(255,0,0,0.1) !important; // manage scrollbar thumb background color here
-}
+
 #contacts {
   float: right;
   width: 56%;
-  background-image: linear-gradient(rgba(153,51,0,0.5),rgba(255,119,51,0.5));
+  background-image: linear-gradient(rgba(153,51,0,0.6),rgba(255,119,51,0.6));
   text-align: left;
   height: 165px;
   color: white;
