--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
 #wrapper{
- width:1024px; 
- margin:0 auto;
+ width:80%; 
+ margin: 0 auto;
+ display: block;
 }
 #header h1{
   text-align: center;
-  color: #f2f2f2;
+  color: rgba(16,16,16);
 }
 
 body {
   font-family: "Roboto Slab", serif;
   background:
-   url(../images/landing_page_bg.jpg) no-repeat center center fixed;
+   //url(../images/landing_page_bg.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
@@ -42,13 +43,13 @@ nav.article {
   min-height: 100%;
 }
 nav.article ul {
-  width:95%;
+  width:98%;
   list-style: none;
-  font-size: 14px; 
+  font-size: 16px; 
   text-align: center;
   min-height: 100%;
   position: relative;
-  right:4.3%;
+  right:2.8%;
 }
 nav.article ul li {
   display:block;
@@ -57,22 +58,24 @@ nav.article ul li {
   background-color: rgba(255,255,255,0.38);
   margin-top: 10px;
   margin-bottom: 10px;
-  max-height: 65px;
+  max-height: 70px;
   border: 4px groove #444444;
   border-radius: 4px;
   font-weight: bold;
   overflow:hidden;
   padding-bottom: 20px;
-  transition: max-height 1s;
+  transition: max-height 0.5s;
+  position:relative;
+  left:2.5%;
 }
 nav.article ul li:hover{
   width:100%;
   max-height: 700px;
   vertical-align: middle;
-  background-color: rgba(64,64,64,1);
   border: 4px groove #444444;
   border-radius: 4px;
   font-weight: bold;
+  overflow: auto;
 }
 
 nav.article ul li:hover::-webkit-scrollbar {
@@ -81,10 +84,15 @@ nav.article ul li:hover::-webkit-scrollbar {
 nav.article ul li:hover::-webkit-scrollbar * {
   background:transparent; // manage scrollbar background color here
 }
+
+#copyright{
+  vertical-align: bottom;
+}
 nav.contact-navigation {
-  display: block;
-  position: relative;
-  right:20px;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  width:100%;
 }
 nav.contact-navigation  ul {
   list-style: none;
@@ -93,12 +101,11 @@ nav.contact-navigation  ul {
 }
 nav.contact-navigation  ul li {
   display: inline-block;
-  background-color: rgba(255,119,51,0.1);
+  background-color: linear-gradient(rgba(96,96,96,0.6),rgba(64,64,64,0.6));
 }
 nav.contact-navigation  ul li a {
   display: block;
   float: left;
-  padding: 15px;
   color: #ffeee6;
   text-decoration: none;
   font-weight: bold;
@@ -123,14 +130,14 @@ nav.navigation  ul li a {
   display: block;
   float: left;
   padding: 3px 36px;
-  color: #ffeee6;
+  color: #ffffff;
   font-size:22px;
   text-decoration: none;
   font-weight: bold;
 }
 nav.navigation  ul li a:hover {
   background: rgba(192,192,192,0.3);
-  color: #fff;
+  color: #111111;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -142,11 +149,6 @@ nav.navigation  ul li a:hover {
 /* page Content */
 
 #profile-picture-wrapper {
-  max-width: 90%;
-  max-height: 30%;
-  position: relative;
-  top: 18px;
-  left: 5%;
 }
 
 #chess_puzzle {
@@ -163,36 +165,39 @@ nav.navigation  ul li a:hover {
 #content {
   display: block;
   clear: both;
-  margin-bottom: 20px;
-  min-height: 355px;
 }
 
 #left-sidebar {
-  width: 35%;
+  width: 15%;
   float: left;
   margin: 0 15px;
-  background-image: linear-gradient(rgba(77,26,0,0.6),rgba(230,77,0,0.6));
-  min-height: 355px; 
+  background-image: linear-gradient(rgba(128,128,128,0.4),rgba(64,64,64,0.6));
   text-align: center;
+  color: black;
   box-shadow: 0 0 0px 0px #4d1a00 inset;
 }
 #right {
-  float: right;
-  width: 62%;
-  background-image: linear-gradient(rgba(153,51,0,0.6),rgba(255,119,51,0.6));
+  width: 72%;
+  background-image: linear-gradient(rgba(128,128,128,0.4),rgba(64,64,64,0.6));
   text-align: left;
   height: 770px;
-  color: white;
+  color: black;
   box-shadow: 0 0 0px 0px #993300 inset;
+  overflow: auto;
 }
-
+#right::-webkit-scrollbar {
+  width: 0px;
+}
+#right::-webkit-scrollbar * {
+  background:transparent; // manage scrollbar background color here
+}
 #blog-container {
   float: right;
-  width: 62%;
-  background-image: linear-gradient(rgba(153,51,0,0.6),rgba(255,119,51,0.6));
+  width: 100%;
+  background-image: linear-gradient(rgba(128,128,128,0.4),rgba(64,64,64,0.6));
   text-align: left;
   max-height: 700px;
-  color: white;
+  color: black;
   box-shadow: 0 0 0px 0px #993300 inset;
   overflow: auto;
 }
@@ -203,18 +208,65 @@ nav.navigation  ul li a:hover {
   background:transparent; // manage scrollbar background color here
 }
 
-#contacts {
-  float: right;
-  width: 56%;
-  background-image: linear-gradient(rgba(153,51,0,0.6),rgba(255,119,51,0.6));
-  text-align: left;
-  height: 165px;
+* {
+  box-sizing: border-box;
+}
+
+/* Style inputs */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
   color: white;
-  box-shadow: 0 0 0px 0px #993300 inset;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Style the container/contact section */
+.container {
+  border-radius: 5px;
+  background-image: linear-gradient(rgba(128,128,128,0.4),rgba(64,64,64,0.6));
+  padding: 10px;
+}
+
+/* Create two columns that float next to eachother */
+.column {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
 }
 footer{
+  display:block;
   text-align: center;
-  color: #f2f2f2;
+  color: rgba(16,16,16);
   position:absolute;
   bottom:0;
   right:0;
