--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 #wrapper{
  width:80%; 
  margin: 0 auto;
- display: block;
+ display: flex;
+ flex-direction: column;
 }
 #header h1{
   text-align: center;
@@ -10,8 +11,7 @@
 
 body {
   font-family: "Roboto Slab", serif;
-  background:
-   //url(../images/landing_page_bg.jpg) no-repeat center center fixed;
+  /* background: url(../images/landing_page_bg.jpg) no-repeat center center fixed; */
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
@@ -25,9 +25,12 @@ body {
   left:20px;
 }
 #chess-puzzle {
-  width:95%;
-  position: relative;
-  left:18%;  
+  /* width:95%; */
+  /* position: relative; */
+  /* left:18%; */
+  display: flex;
+  justify-content: center;
+  object-fit: cover;
 }
 
 #about {
@@ -82,12 +85,9 @@ nav.article ul li:hover::-webkit-scrollbar {
   width: 0px;
 }
 nav.article ul li:hover::-webkit-scrollbar * {
-  background:transparent; // manage scrollbar background color here
+  background:transparent; /* manage scrollbar background color here */
 }
 
-#copyright{
-  vertical-align: bottom;
-}
 nav.contact-navigation {
   display: inline-block;
   margin-left: auto;
@@ -149,6 +149,7 @@ nav.navigation  ul li a:hover {
 /* page Content */
 
 #profile-picture-wrapper {
+  background: white;
 }
 
 #chess_puzzle {
@@ -180,16 +181,18 @@ nav.navigation  ul li a:hover {
   width: 72%;
   background-image: linear-gradient(rgba(128,128,128,0.4),rgba(64,64,64,0.6));
   text-align: left;
-  height: 770px;
+  height: 620px;
   color: black;
   box-shadow: 0 0 0px 0px #993300 inset;
   overflow: auto;
+  padding: 18px 36px;
+  text-align: justify;
 }
 #right::-webkit-scrollbar {
   width: 0px;
 }
 #right::-webkit-scrollbar * {
-  background:transparent; // manage scrollbar background color here
+  background:transparent; /* manage scrollbar background color here */
 }
 #blog-container {
   float: right;
@@ -205,7 +208,7 @@ nav.navigation  ul li a:hover {
   width: 0px;
 }
 #blog-container::-webkit-scrollbar * {
-  background:transparent; // manage scrollbar background color here
+  background:transparent; /* manage scrollbar background color here */
 }
 
 * {
@@ -243,13 +246,15 @@ input[type=submit]:hover {
 
 /* Create two columns that float next to eachother */
 .column {
-  float: left;
-  width: 50%;
-  margin-top: 6px;
-  padding: 20px;
+margin-left: 20px;
 }
 
 /* Clear floats after the columns */
+.row {
+  display: flex;
+  padding: 20px;
+}
+
 .row:after {
   content: "";
   display: table;
@@ -263,17 +268,19 @@ input[type=submit]:hover {
     margin-top: 0;
   }
 }
+
 footer{
-  display:block;
+  display: block;
   text-align: center;
   color: rgba(16,16,16);
-  position:absolute;
-  bottom:0;
-  right:0;
+  position: fixed;
+  bottom: 0;
+  right: 10px;
 }
+
 /* clearfix */
 .clearfix:after {
-  content: “.”;
+  content: '';
   display: block;
   clear: both;
   visibility: hidden;
