--- a/css/style.css
+++ b/css/style.css
@@ -89,19 +89,13 @@ nav.article ul li:hover::-webkit-scrollbar * {
 }
 
 nav.contact-navigation {
-  display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
-  width:100%;
+  right: 0;
+  top: 50%;
+  position: fixed;
 }
-nav.contact-navigation  ul {
-  list-style: none;
-  font-size: 14px; 
-  text-align: center;
-}
+
 nav.contact-navigation  ul li {
-  display: inline-block;
-  background-color: linear-gradient(rgba(96,96,96,0.6),rgba(64,64,64,0.6));
+  display: block;
 }
 nav.contact-navigation  ul li a {
   display: block;
@@ -181,7 +175,7 @@ nav.navigation  ul li a:hover {
   width: 72%;
   background-image: linear-gradient(rgba(128,128,128,0.4),rgba(64,64,64,0.6));
   text-align: left;
-  height: 620px;
+  height: 630px;
   color: black;
   box-shadow: 0 0 0px 0px #993300 inset;
   overflow: auto;
@@ -217,10 +211,6 @@ nav.navigation  ul li a:hover {
 
 /* Style inputs */
 input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  margin-top: 6px;
   margin-bottom: 16px;
   resize: vertical;
 }
@@ -252,13 +242,8 @@ margin-left: 20px;
 /* Clear floats after the columns */
 .row {
   display: flex;
+  flex-direction: column;
   padding: 20px;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@@ -297,3 +282,127 @@ html[xmlns] .clearfix {
 * html .clearfix {
   height: 1%;
 }
+
+/* new CSS for form */
+.form-container {
+  background: #fff;
+  padding: 2rem;
+  border-radius: 6px;
+  display: flex;
+  width: 60%;
+  flex-direction: column;
+  min-height: 300px;
+  margin: 0 auto;
+  box-shadow: 0 10px 50px 0 #ccc;
+  margin-bottom: 2rem;
+}
+
+.ct-us-header {
+  font-family: Roboto-Light;
+  font-size: 30px;
+  font-weight: 100;
+  margin: 7px auto;
+}
+
+.ct-us-header + p {
+  font-size: 18px;
+  margin-bottom: 25px;
+}
+
+.ct-us-parent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: url('../images/contact_us_bg.png');
+  background-size: cover;
+}
+
+.form-area {
+  border-radius: 6px;
+  font-size: 12px;
+}
+
+.form-area input {
+  padding: 15px;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 15px;
+  font-size: 12px;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
+}
+
+.form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0,123,255,0.25);
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.snd-btn {
+  padding: 12px;
+  /* background: #ff3c64;  */
+  background: #4e71a3;
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 700;
+  border: 0px;
+  margin-top: 15px;
+}
+
+.is-hidden {
+  display: none !important;
+}
+
+.js-loading {
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+}
+
+@keyframes rotate {
+  100% { transform: rotate(360deg); }
+ }
+
+ @keyframes dash {
+  0% { stroke-dasharray: 1,200; stroke-dashoffset: 0; }
+  50% { stroke-dasharray: 89,200; stroke-dashoffset: -35; }
+  100% { stroke-dasharray: 89,200; stroke-dashoffset: -124; }
+ }
+
+ .loading-spinner {
+   width: 50px;
+   height: 50px;
+ }
+
+ .loading-spinner svg {
+   position: relative;
+   animation: rotate 2s linear infinite;
+   height: 50px;
+   width: 50px;
+   background: #4e71a3;
+ }
+
+ .loading-spinner circle {
+   stroke: var(--accent);
+   stroke-dasharray: 1,200;
+   stroke-dashoffset: 0;
+   stroke-linecap: round;
+   animation: dash 1.5s ease-in-out infinite;
+ }
